--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <p>"Front-end developer and avid reader."</p>
       </div>
       <div class="links">
-        <a href="#"><button>GitHub</button></a>
-        <a href="#"><button>Frontend Mentor</button></a>
-        <a href="#"><button>LinkedIn</button></a>
-        <a href="#"><button>Twitter</button></a>
-        <a href="#"><button>Instagram</button></a>
+        <a href="#">GitHub</a>
+        <a href="#">Frontend Mentor</a>
+        <a href="#">LinkedIn</a>
+        <a href="#">Twitter</a>
+        <a href="#">Instagram</a>
       </div>
     </section>
   </main>
