--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <main>
     <section class="container">
       <div class="pfp">
-        <img src="assets/images/avatar-jessica.jpeg" alt="pfp">
+        <img src="assets/images/avatar-jessica.jpeg" alt="Profile picture of Jessica Randall">
       </div>
       <div class="text">
         <h1>Jessica Randall</h1>
